// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlannerEdit /> can render with empty, invalid props 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Connect(PlannerForm) />
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginTop": "5%",
        }
      }
    >
      <Styled(Button)
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "darkred",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Delete
        </Styled(H3)>
      </Styled(Button)>
      <Styled(Button)
        disabled={true}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "gray",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "darkred",
            }
          }
        >
          Save
        </Styled(H3)>
      </Styled(Button)>
    </Component>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`<PlannerEdit /> can render with invalid text for grade and units props 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Connect(PlannerForm) />
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginTop": "5%",
        }
      }
    >
      <Styled(Button)
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "darkred",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Delete
        </Styled(H3)>
      </Styled(Button)>
      <Styled(Button)
        disabled={true}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "gray",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "darkred",
            }
          }
        >
          Save
        </Styled(H3)>
      </Styled(Button)>
    </Component>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`<PlannerEdit /> can render with invalid values greater than max range for grade and units props 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Connect(PlannerForm) />
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginTop": "5%",
        }
      }
    >
      <Styled(Button)
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "darkred",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Delete
        </Styled(H3)>
      </Styled(Button)>
      <Styled(Button)
        disabled={true}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "gray",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "darkred",
            }
          }
        >
          Save
        </Styled(H3)>
      </Styled(Button)>
    </Component>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`<PlannerEdit /> can render with invalid values less than min range for grade and units props 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Connect(PlannerForm) />
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginTop": "5%",
        }
      }
    >
      <Styled(Button)
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "darkred",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Delete
        </Styled(H3)>
      </Styled(Button)>
      <Styled(Button)
        disabled={true}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "gray",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "darkred",
            }
          }
        >
          Save
        </Styled(H3)>
      </Styled(Button)>
    </Component>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`<PlannerEdit /> can render with valid values for props 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Connect(PlannerForm) />
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginTop": "5%",
        }
      }
    >
      <Styled(Button)
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "darkred",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "white",
            }
          }
        >
          Delete
        </Styled(H3)>
      </Styled(Button)>
      <Styled(Button)
        disabled={false}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Styled(H3)
          style={
            Object {
              "color": "darkred",
            }
          }
        >
          Save
        </Styled(H3)>
      </Styled(Button)>
    </Component>
  </Styled(Content)>
</Styled(Container)>
`;
